# mira

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.md  make.bat  metrics.rst  requirements.txt  tutorials.md
docs/core/: annotations.rst  index.md  index.rst  scenes.rst  selections.rst
docs/datasets/: existing.rst  index.rst  load.rst  save.rst
docs/detectors/: advancedeast.rst  east.rst  efficientdet.rst  fasterrcnn.rst  index.rst  mtcnn.rst  retinanet.rst
docs/stubs/tensorflow/: __init__.py
docs/stubs/tensorflow/keras/: __init__.py  backend.py  models.py  regularizers.py  utils.py
docs/tutorials/: coco2014.md  index.md  quickstart.md  textdetection.md
mira/: __init__.py  _version.py  metrics.py  pylint.py  utils.py
mira/classifiers/: __init__.py  classifier.py  clip.py  torchvision.py
mira/core/: __init__.py  annotation.py  augmentations.py  callbacks.py  experimental.py  files.py  image.py  imagemeta.py  resizing.py  scene.py  selection.py  torchtools.py  training.py  utils.py
mira/core/protos/: scene_pb2.py
mira/datasets/: __init__.py  coco.py  pixabay.py  preloaded.py  via.py  voc.py
mira/datasets/assets/: coco_classes_90.txt  imagenet1k_classes.txt
mira/detectors/: __init__.py  advancedeast.py  callbacks.py  common.py  detector.py  detectron.py  detr.py  east.py  efficientdet.py  fasterrcnn.py  mtcnn.py  retinanet.py  segmentation.py  utils.py  yolov3.py
mira/detectors/assets/serve/: README.md  efficientdet.py  fasterrcnn.py  object_detector.py  retinanet.py  smp.py
mira/detectors/experimental/: pixelwise.py  segmentation.py  serving.py
mira/detectors/keras_resnet/: README.md  blocks.py  models.py
mira/detectors/keras_retinanet/: README.md  backend.py  initializers.py
mira/detectors/keras_retinanet/layers/: __init__.py
mira/detectors/keras_retinanet/models/: densenet.py  effnet.py  mobilenet.py  resnet.py  retinanet.py  senet.py  vgg.py
mira/detectors/keras_retinanet/utils/: anchors.py
mira/metrics/: __init__.py
mira/utils/: __init__.py
packaging/: package-automl.sh
protos/: scene.proto
tests/: conftest.py  test_core.py  test_datasets.py  test_detectors.py  test_detectors_common.py  test_metrics.py  test_resizing.py
tests/assets/: via_project.json
