[flake8]
ignore = E226,E129,W503,W391,W292,E252,W504,F403

[metadata]
name = mira
version = 0.1a10
author = Fausto Morales
author_email = faustomorales@gmail.com
description = A package for simplifying object detection
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    keras-retinanet==0.5.0
    opencv-python>=4.0.0
    imgaug>=0.2.7
    validators>=0.12.4
    nms>=0.1.6
    numpy
    keras
    scikit-learn

[options.extras_require]
tests =
    pytest==4.0.2
    pytest-cov==2.6.0
docs =
    sphinx-autodoc-typehints==1.6.0
    sphinx-autobuild==0.7.1
    sphinx==1.8.3
    m2r==0.2.1
    sphinx_rtd_theme==0.4.2
    sphinxcontrib-mermaid==0.3.1

[tool:pytest]
addopts = "--cov=mira"
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working:DeprecationWarning
    ignore:inspect\.getargspec\(\) is deprecated, use inspect\.signature\(\) instead:DeprecationWarning
    ignore:The output shape of `ResNet50\(include_top=False\)` has been changed since Keras 2\.2\.0\.:UserWarning
    ignore:np\.asscalar\(a\) is deprecated since NumPy v1.16, use a\.item\(\) instead:DeprecationWarning