[flake8]
ignore = E226,E129,W503,W391,W292,E252,W504,F403

[metadata]
name = mira
version = 0.1a14
author = Fausto Morales
author_email = faustomorales@gmail.com
description = A package for simplifying object detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faustomorales/mira
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    keras-retinanet>=0.5.0
    opencv-python>=4.0.0
    imgaug>=0.2.7
    validators>=0.12.4
    nms>=0.1.6
    pandas
    numpy
    keras
    scikit-learn

[tool:pytest]
addopts = "--cov=mira"
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working:DeprecationWarning
    ignore:inspect\.getargspec\(\) is deprecated, use inspect\.signature\(\) instead:DeprecationWarning
    ignore:The output shape of `ResNet50\(include_top=False\)` has been changed since Keras 2\.2\.0\.:UserWarning
    ignore:np\.asscalar\(a\) is deprecated since NumPy v1.16, use a\.item\(\) instead:DeprecationWarning